fix some more alignment issues

--- a/infinitv.css
+++ b/infinitv.css
@@ -653,7 +653,7 @@
 }
 
 /* Library Pages: Center Content (TV) */
-.layout-tv .libraryPage:not(#indexPage) .itemsContainer-tv {
+.layout-tv .libraryPage:not(#indexPage) > .pageTabContent > .itemsContainer-tv {
   padding-left: 3vw !important;
   padding-right: 3vw !important;
 }
